--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 	  <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
 
-	<link href="../assets/logo/icon.png" rel="icon" />
-	  <link href="../css/fixedNav.css" rel="stylesheet" type="text/css" />
-   <link href="../css/slideshow.css" rel="stylesheet" type="text/css" />
+	<link href="assets/logo/icon.png" rel="icon" />
+	  <link href="css/fixedNav.css" rel="stylesheet" type="text/css" />
+   <link href="css/slideshow.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
