--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 
-    <link href="../assets/logo/icon.png" rel="icon" />
-    <link href="../css/fixedNav.css" rel="stylesheet" type="text/css" />
-    <link href="../css/contact.css" rel="stylesheet" type="text/css" />
+    <link href="assets/logo/icon.png" rel="icon" />
+    <link href="css/fixedNav.css" rel="stylesheet" type="text/css" />
+    <link href="css/contact.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
