--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
 <section class="content" id="content-1">
     <div class="image-wrapper" >
-        <img src="../assets/pictures/portrait.jpg">
+        <img src="assets/pictures/portrait.jpg">
     </div>
     <div class="content-wrapper" id="about">
 		<div class="text-wrapper">
@@ -72,7 +72,7 @@
 
 <section class="content" id="content-2">
     <div class="image-wrapper">
-        <img src="../assets/pictures/red.png">
+        <img src="assets/pictures/red.png">
     </div>
     <div class="content-wrapper">
 		<div class="text-wrapper">
@@ -89,7 +89,7 @@
 
 <section class="content" id="content-3">
     <div class="image-wrapper">
-        <img src="../assets/pictures/no_face.jpg">
+        <img src="assets/pictures/no_face.jpg">
     </div>
     <div class="content-wrapper">
 		<div class="text-wrapper">
