--- a/releases.html
+++ b/releases.html
@@ -53,7 +53,7 @@
 
 <section class="content" id="content-1">
     <div class="image-wrapper" >
-        <img src="../assets/album_art/EP3.jpg">
+        <img src="assets/album_art/EP3.jpg">
     </div>
     <div class="content-wrapper">
 		<div class="text-wrapper">
@@ -69,7 +69,7 @@
 
 <section class="content" id="content-2">
     <div class="image-wrapper">
-        <img src="../assets/album_art/gargoyle.jpg">
+        <img src="assets/album_art/gargoyle.jpg">
     </div>
     <div class="content-wrapper">
 		<div class="text-wrapper">
@@ -90,7 +90,7 @@
 
 <section class="content" id="content-3">
     <div class="image-wrapper">
-        <img src="../assets/album_art/EP2.jpg">
+        <img src="assets/album_art/EP2.jpg">
     </div>
     <div class="content-wrapper">
 		<div class="text-wrapper">
@@ -107,7 +107,7 @@
 
 <section class="content" id="content-4">
     <div class="image-wrapper">
-        <img src="../assets/album_art/EP1.jpg">
+        <img src="assets/album_art/EP1.jpg">
     </div>
     <div class="content-wrapper">
 		<div class="text-wrapper">
