--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
   <nav class="phone-nav">
 
 	  <ul>
-		  <li id="phone-logo"><a>l</a>
+		  <li id="phone-logo">
+			<a href="#">
+						<?xml version="1.0" encoding="UTF-8"?>
+						<svg enable-background="new 0 0 640 480" version="1.1" viewBox="0 0 640 480" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
+						<style type="text/css">
+							.st0{fill:none;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
+						</style>
+						<polyline class="st0" points="228.5 433.4 228.5 103.2 408.5 103.2 408.5 433.4"/>
+						<polyline class="st0" points="209.9 410.7 209.9 79.9 430.1 79.9 430.1 410.7"/>
+						<polyline class="st0" points="189 385.6 189 56.4 449.4 56.4 449.4 385.6"/>
+						<line class="st0" x1="189" x2="228.5" y1="56.4" y2="103.2"/>
+						<line class="st0" x1="228.5" x2="209.9" y1="103.2" y2="103.2"/>
+						<line class="st0" x1="408.5" x2="430.1" y1="103.2" y2="103.2"/>
+						<line class="st0" x1="209.9" x2="189" y1="79.9" y2="79.9"/>
+						<line class="st0" x1="430.1" x2="449.4" y1="79.9" y2="79.8"/>
+						<line class="st0" x1="449.4" x2="408.5" y1="56.4" y2="103.2"/>
+						<line class="st0" x1="449.4" x2="430.1" y1="79.8" y2="103.2"/>
+						<line class="st0" x1="189" x2="209.9" y1="79.9" y2="103.2"/>
+						</svg>
+			</a>
 			  <ul class="dropdown">
 				  <li><a id="active">HOME</a></li>
 				  <li><a href="about.html">SHOWS</a></li>
