--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
 	<meta name="viewport" content="width=780">
-    <title>About</title>
+    <title>Shows</title>
 
 
     <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet" />
@@ -54,8 +54,8 @@
 						</svg>
 			</a>
 			  <ul class="dropdown">
-				  <li><a id="active">HOME</a></li>
-				  <li><a href="about.html">SHOWS</a></li>
+				  <li><a href="index.html">HOME</a></li>
+				  <li><a href="about.html" id="active">SHOWS</a></li>
 				  <li><a href="releases.html">RELEASES</a></li>
 				  <li><a href="contact.html">CONTACT</a></li>
 			  </ul>
