--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 			</a>
 			  <ul class="dropdown">
 				  <li><a href="index.html">HOME</a></li>
-				  <li><a href="about.html" id="active">SHOWS</a></li>
+				  <li><a id="active">SHOWS</a></li>
 				  <li><a href="releases.html">RELEASES</a></li>
 				  <li><a href="contact.html">CONTACT</a></li>
 			  </ul>
