--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,10 @@
 						</svg>
 			</a>
 			  <ul class="dropdown">
-				  <li><a id="active">HOME</a></li>
+				  <li><a href="index.html">HOME</a></li>
 				  <li><a href="about.html">SHOWS</a></li>
 				  <li><a href="releases.html">RELEASES</a></li>
-				  <li><a href="contact.html">CONTACT</a></li>
+				  <li><a id="active" >CONTACT</a></li>
 			  </ul>
 		  </li>
       </ul>
